--- a/src/app/samples.component/samples.component.css
+++ b/src/app/samples.component/samples.component.css
@@ -8,7 +8,7 @@ table {
 }
 
 .sample-container{
-    visibility: hidden;
+    visibility: visible;
 }
 
 table {
@@ -59,6 +59,10 @@ img:hover {
 .desc-left {
     padding: 0 10% 0 0;
     text-align: center;
+}
+
+.sample-body{
+    width: 100%;
 }
 
 .sample-full {
@@ -117,6 +121,14 @@ footer {
 
     #mob-sample-menu table {
         width: 100%;
+        margin: 0;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    .img-right {
         margin: 0;
     }
 
